test/conformance/chainsaw/generate/validation/policy/permissions/01-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-validate-create-sa-permission-ns
