test/conformance/chainsaw/generate/validation/policy/permissions/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-validate-create-sa-permission-ns
