test/conformance/chainsaw/generate/validation/policy/permissions/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-validate-create-sa-permission
  namespace: pol-validate-create-sa-permission-ns
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
