test/conformance/chainsaw/generate/validation/policy/permissions/02-fail-no-permission.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: fail-no-permission
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: policy.yaml
